# power-sdk

./: .pre-commit-config.yaml  Jenkinsfile  README.md  pyproject.toml  readthedocs_requirements.txt
.github/workflows/: release.yaml  test.yml  test_and_build.yml
cognite/power/: __init__.py  client.py  data_classes.py  exceptions.py  power_area.py  power_corridor.py  power_graph.py  power_plot.py
cognite/power/_api/: generic_power.py  power_transformer_ends_api.py
docs/: Makefile
docs/source/: cognite.rst  conf.py  index.rst
notebooks/: powersdk-test.ipynb
tests/: test_client.py
